Blok2/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "statyczny-adres-ip"
spec:
  tls:
    - hosts:
      - zadanie-na-staz-devops.org
      secretName: tls-secret
  rules:
    - host: zadanie-na-staz-devops.org
      http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: nginx-service
                  port:
                    number: 80
